force-app/main/default/objects/Plane_Type__c/Plane_Type__c.object-meta.xml
<CustomObject>
    <label>Plane Type</label>
    <nameField>
        <label>Plane Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plane Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>