force-app/main/default/objects/Plane_Type__c/fields/First_seats__c.field-meta.xml
<CustomField>
    <fullName>First_seats__c</fullName>
    <label>First_seats</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>